# digital_image_process

./: conv.ipynb  myfunc.cpp  数字图像处理实验ch2.docx  数字图像处理实验模板.docx
ch1/: CMakeLists.txt  main.cpp  myfunc.cpp  myfunc.h
ch2/: CMakeLists.txt  main.cpp  myfunc.cpp  myfunc.h
ch3/: CMakeLists.txt  firsttest.cpp  main.cpp  myfunc.cpp  myfunc.h  ~$图像处理实验ch2.docx  数字图像处理实验ch2.docx  数字图像处理实验ch2~BC971.tmp
ch4/: CMakeLists.txt  histogram.hpp  img_trans.cpp  main.cpp  myfunc.cpp  myfunc.h  temp.cpp  utils.hpp  ~$图像处理实验ch2.docx  数字图像处理实验ch2.docx  数字图像处理实验ch3.docx
ch5/: CMakeLists.txt  Freq_domain.hpp  filter.cpp  filter.h  img_proc.hpp  img_trans.cpp  img_trans.h  main.cpp  neina.md  utils.hpp
ch6/: CMakeLists.txt  Freq_domain.hpp  filter.cpp  filter.h  main.cpp  utils.hpp
ch7/: CMakeLists.txt  filter.cpp  filter.h  img_proc.hpp  img_trans.cpp  img_trans.h  main.cpp  utils.hpp  相关流程图.drawio
repots/: ~WRL1150.tmp  实验报告汇总.docx
test/: CMakeLists.txt  joint_control.mhtml  main.cpp  myfunc.cpp
test_cv/: CMakeLists.txt  histogram.hpp  main.cpp  test.py
